2008-03-20  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): Remove |first_start_tag|
	flag, which is no longer used.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Set line/column information to element nodes.

	* mkhtmlparser.pl (!!!create-element, !!!insert-element,
	and !!!insert-element-t): Set line/column information to
	element nodes.

2008-03-17  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_get_next_token): The first "<" character
	in "<?", "<>", or "</>" should be the error point.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Some more fixes on error position reporting.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Token-level precious error reporting.

2008-03-16  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Preparation for more precious error point
	reporting.

2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Error type revised.

2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Similar codes are merged together, again.

2008-03-11  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Similar codes are merged together.

2008-03-10  Wakaba  <wakaba@suika.fam.cx>

	* mkhtmlparser.pl: Set "level" parameter to parse errors.

	* HTML.pm.src: Code refined.

2008-03-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |</body>| treatement has been changed (HTML5
	revision 1348).  Note that I really don't know this makes
	any difference in the black-box behavior of the parser.

2008-03-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: New end-of-file token implementation (HTML5
	revision 1348).

2008-03-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |applet| support (HTML5 revision 1347).

2008-03-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Foster parenting in AAA (HTML5 revision 1343).

2008-03-09  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for |<input>| in the "in select" insertion
	mode and support for the "in select in table" insertion mode (HTML5