@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.117 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.118 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -466,7 +466,8 @@ sub _get_next_token ($) {
       # Anything else
       my $token = {type => CHARACTER_TOKEN,
                    data => chr $self->{next_char},
-                   line => $self->{line}, column => $self->{column}};
+                   #line => $self->{line}, column => $self->{column},
+                  };
       ## Stay in the data state
       !!!next-input-character;
 
@@ -476,7 +477,7 @@ sub _get_next_token ($) {
     } elsif ($self->{state} == ENTITY_DATA_STATE) {
       ## (cannot happen in CDATA state)
 
-      my ($l, $c) = ($self->{line_prev}, $self->{column_prev});
+      #my ($l, $c) = ($self->{line_prev}, $self->{column_prev});
       
       my $token = $self->_tokenize_attempt_to_consume_an_entity (0, -1);
 
@@ -486,7 +487,8 @@ sub _get_next_token ($) {
       unless (defined $token) {
         !!!cp (13);
         !!!emit ({type => CHARACTER_TOKEN, data => '&',
-                  line => $l, column => $c});
+                  #line => $l, column => $c,
+                 });
       } else {
         !!!cp (14);
         !!!emit ($token);
@@ -506,8 +508,9 @@ sub _get_next_token ($) {
           $self->{state} = DATA_STATE;
 
           !!!emit ({type => CHARACTER_TOKEN, data => '<',
-                    line => $self->{line_prev},
-                    column => $self->{column_prev}});
+                    #line => $self->{line_prev},
+                    #column => $self->{column_prev},
+                   });
 
           redo A;
         }
@@ -552,8 +555,9 @@ sub _get_next_token ($) {
           !!!next-input-character;
 
           !!!emit ({type => CHARACTER_TOKEN, data => '<>',
-                    line => $self->{line_prev},
-                    column => $self->{column_prev}});
+                    #line => $self->{line_prev},
+                    #column => $self->{column_prev},
+                   });
 
           redo A;
         } elsif ($self->{next_char} == 0x003F) { # ?
@@ -563,8 +567,9 @@ sub _get_next_token ($) {
                           column => $self->{column_prev});
           $self->{state} = BOGUS_COMMENT_STATE;
           $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                    line => $self->{line_prev},
-                                    column => $self->{column_prev}};
+                                    #line => $self->{line_prev},
+                                    #column => $self->{column_prev},
+                                   };
           ## $self->{next_char} is intentionally left as is
           redo A;
         } else {
@@ -574,8 +579,9 @@ sub _get_next_token ($) {
           ## reconsume
 
           !!!emit ({type => CHARACTER_TOKEN, data => '<',
-                    line => $self->{line_prev},
-                    column => $self->{column_prev}});
+                    #line => $self->{line_prev},
+                    #column => $self->{column_prev},
+                   });
 
           redo A;
         }
@@ -604,7 +610,8 @@ sub _get_next_token ($) {
               $self->{state} = DATA_STATE;
 
               !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                        line => $l, column => $c});
+                        #line => $l, column => $c,
+                       });
   
               redo A;
             }
@@ -624,7 +631,8 @@ sub _get_next_token ($) {
             !!!back-next-input-character (@next_char);
             $self->{state} = DATA_STATE;
             !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                      line => $l, column => $c});
+                      #line => $l, column => $c,
+                     });
             redo A;
           } else {
             !!!cp (27);
@@ -638,7 +646,8 @@ sub _get_next_token ($) {
           # next-input-character is already done
           $self->{state} = DATA_STATE;
           !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                    line => $l, column => $c});
+                    #line => $l, column => $c,
+                   });
           redo A;
         }
       }
@@ -677,7 +686,8 @@ sub _get_next_token ($) {
         # reconsume
 
         !!!emit ({type => CHARACTER_TOKEN, data => '</',
-                  line => $l, column => $c});
+                  #line => $l, column => $c,
+                 });
 
         redo A;
       } else {
@@ -685,8 +695,9 @@ sub _get_next_token ($) {
         !!!parse-error (type => 'bogus end tag');
         $self->{state} = BOGUS_COMMENT_STATE;
         $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                  line => $self->{line_prev}, # "<" of "</"
-                                  column => $self->{column_prev} - 1};
+                                  #line => $self->{line_prev}, # "<" of "</"
+                                  #column => $self->{column_prev} - 1,
+                                 };
         ## $self->{next_char} is intentionally left as is
         redo A;
       }
@@ -1425,7 +1436,7 @@ sub _get_next_token ($) {
     } elsif ($self->{state} == MARKUP_DECLARATION_OPEN_STATE) {
       ## (only happen if PCDATA state)
 
-      my ($l, $c) = ($self->{line_prev}, $self->{column_prev} - 1);
+      #my ($l, $c) = ($self->{line_prev}, $self->{column_prev} - 1);
 
       my @next_char;
       push @next_char, $self->{next_char};
@@ -1436,7 +1447,8 @@ sub _get_next_token ($) {
         if ($self->{next_char} == 0x002D) { # -
           !!!cp (127);
           $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                    line => $l, column => $c};
+                                    #line => $l, column => $c,
+                                   };
           $self->{state} = COMMENT_START_STATE;
           !!!next-input-character;
           redo A;
@@ -1474,7 +1486,8 @@ sub _get_next_token ($) {
                     $self->{state} = DOCTYPE_STATE;
                     $self->{current_token} = {type => DOCTYPE_TOKEN,
                                               quirks => 1,
-                                              line => $l, column => $c};
+                                              #line => $l, column => $c,
+                                             };
                     !!!next-input-character;
                     redo A;
                   } else {
@@ -1504,7 +1517,8 @@ sub _get_next_token ($) {
       !!!back-next-input-character (@next_char);
       $self->{state} = BOGUS_COMMENT_STATE;
       $self->{current_token} = {type => COMMENT_TOKEN, data => '',
-                                line => $l, column => $c};
+                                #line => $l, column => $c,
+                               };
       redo A;
       
       ## ISSUE: typos in spec: chacacters, is is a parse error
@@ -2302,7 +2316,9 @@ sub _tokenize_attempt_to_consume_an_entity ($$$) {
         }
 
         return {type => CHARACTER_TOKEN, data => chr $code,
-                has_reference => 1, line => $l, column => $c};
+                has_reference => 1,
+                #line => $l, column => $c,
+               };
       } # X
     } elsif (0x0030 <= $self->{next_char} and
              $self->{next_char} <= 0x0039) { # 0..9
@@ -2345,7 +2361,8 @@ sub _tokenize_attempt_to_consume_an_entity ($$$) {
       }
       
       return {type => CHARACTER_TOKEN, data => chr $code, has_reference => 1,
-              line => $l, column => $c};
+              #line => $l, column => $c,
+             };
     } else {
       !!!cp (1019);
       !!!parse-error (type => 'bare nero', line => $l, column => $c);
@@ -2399,24 +2416,28 @@ sub _tokenize_attempt_to_consume_an_entity ($$$) {
     if ($match > 0) {
       !!!cp (1023);
       return {type => CHARACTER_TOKEN, data => $value, has_reference => 1,
-              line => $l, column => $c};
+              #line => $l, column => $c,
+             };
     } elsif ($match < 0) {
       !!!parse-error (type => 'no refc', line => $l, column => $c);
       if ($in_attr and $match < -1) {
         !!!cp (1024);
         return {type => CHARACTER_TOKEN, data => '&'.$entity_name,
-                line => $l, column => $c};
+                #line => $l, column => $c,
+               };
       } else {
         !!!cp (1025);
         return {type => CHARACTER_TOKEN, data => $value, has_reference => 1,
-                line => $l, column => $c};
+                #line => $l, column => $c,
+               };
       }
     } else {
       !!!cp (1026);
       !!!parse-error (type => 'bare ero', line => $l, column => $c);
       ## NOTE: "No characters are consumed" in the spec.
       return {type => CHARACTER_TOKEN, data => '&'.$value,
-              line => $l, column => $c};
+              #line => $l, column => $c,
+             };
     }
   } else {
     !!!cp (1027);
@@ -2727,7 +2748,10 @@ sub _tree_construction_root_element ($) {
             !!!cp ('t24');
             $self->{application_cache_selection}
                 ->($token->{attributes}->{manifest}->{value});
-            ## ISSUE: No relative reference resolution?
+            ## ISSUE: Spec is unclear on relative references.
+            ## According to Hixie (#whatwg 2008-03-19), it should be
+            ## resolved against the base URI of the document in HTML
+            ## or xml:base of the element in XHTML.
           } else {
             !!!cp ('t25');
             $self->{application_cache_selection}->(undef);
@@ -5908,12 +5932,14 @@ sub _tree_construction_main ($) {
           if ($prompt_attr) {
             !!!cp ('t390');
             push @tokens, {type => CHARACTER_TOKEN, data => $prompt_attr->{value},
-                           line => $token->{line}, column => $token->{column}};
+                           #line => $token->{line}, column => $token->{column},
+                          };
           } else {
             !!!cp ('t391');
             push @tokens, {type => CHARACTER_TOKEN,
                            data => 'This is a searchable index. Insert your search keywords here: ',
-                           line => $token->{line}, column => $token->{column}}; # SHOULD
+                           #line => $token->{line}, column => $token->{column},
+                          }; # SHOULD
             ## TODO: make this configurable
           }
           push @tokens,
@@ -6579,4 +6605,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/03/19 23:43:47 $
+# $Date: 2008/03/20 01:34:00 $
