@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Thu Mar 20 08:41:46 2008
-# Current time GMT:   Wed Mar 19 23:41:46 2008
+# Current time local: Thu Mar 20 10:32:21 2008
+# Current time GMT:   Thu Mar 20 01:32:21 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
