@@ -1,7 +1,7 @@
 1..472
 # Running under perl version 5.008007 for linux
-# Current time local: Thu Mar 20 08:41:33 2008
-# Current time GMT:   Wed Mar 19 23:41:33 2008
+# Current time local: Thu Mar 20 10:32:06 2008
+# Current time GMT:   Thu Mar 20 01:32:06 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
