@@ -1,5 +1,9 @@
 2008-03-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Unused line/column markings are removed.
+
+2008-03-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src (_get_next_token): Remove |first_start_tag|
 	flag, which is no longer used.
 
